Bug 369486 - "picture of the day" and "event of the day in history" are not displayed
Summary: "picture of the day" and "event of the day in history" are not displayed
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-28 15:57 UTC by Philippe ROUBACH
Modified: 2021-10-19 17:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe ROUBACH 2016-09-28 15:57:09 UTC
opensuse 42.1 x86_64
korganizer 16.04.3

in korganizer settings in external modules 
i check "picture of the day" and "event of the day in history"
then "ok"
then
they are not displayed over the calendar view
there is no separator you can slide to open the window where the external module must be displayed


Reproducible: Always
Comment 1 Philippe ROUBACH 2017-04-02 12:04:33 UTC
opensuse 42.2
korganizer 5.4.80b1 (17.03)

same problem
Comment 2 Philippe ROUBACH 2018-02-17 16:17:15 UTC
upstream problem
Comment 3 Philippe ROUBACH 2018-02-17 16:18:34 UTC
sorry don't take care of my previous comment
Comment 4 Philippe ROUBACH 2019-02-16 16:02:40 UTC
kontact 5.10.2

problem still there
Comment 5 Philippe ROUBACH 2020-01-02 09:53:17 UTC
kde apps 19.12.0
kde plasma 5.17.4
kde frameworks 5.65.0
qt 5.14

problem still there.
Comment 6 Philippe ROUBACH 2020-10-14 13:16:38 UTC
plasma 5.20.0
kde framewoks 5.75.0
qt 5.15.1
kde apps 20.08.2

openSuse Leap 15.2 Argon

some improvement :
"this day in history" is now displayed but
"image of day" still is not displayed.
Comment 7 Friedrich W. H. Kossebau 2021-10-16 18:15:12 UTC
Candidate MR to restore the "Picture of the day" plugin up at https://invent.kde.org/pim/kdepim-addons/-/merge_requests/17
Comment 8 Friedrich W. H. Kossebau 2021-10-19 17:15:28 UTC
Git commit 120749962e37f8713b32bfe9f5d8fa69af19e9a8 by Friedrich W. H. Kossebau.
Committed on 19/10/2021 at 15:10.
Pushed by kossebau into branch 'master'.

Update KOrganizer POTD plugin for current Wikipedia API

M  +1    -0    korganizer/plugins/picoftheday/CMakeLists.txt
A  +385  -0    korganizer/plugins/picoftheday/element.cpp     [License: GPL(v2.0+)]
A  +95   -0    korganizer/plugins/picoftheday/element.h     [License: GPL(v2.0+)]
M  +23   -280  korganizer/plugins/picoftheday/picoftheday.cpp
M  +5    -53   korganizer/plugins/picoftheday/picoftheday.h

https://invent.kde.org/pim/kdepim-addons/commit/120749962e37f8713b32bfe9f5d8fa69af19e9a8