Update KOrganizer POTD plugin for current Wikipedia API

BUG: 369486