korganizer/plugins/picoftheday/picoftheday.h
@@ -2,6 +2,7 @@
   This file is part of KOrganizer.
   SPDX-FileCopyrightText: 2001 Cornelius Schumacher <schumacher@kde.org>
   SPDX-FileCopyrightText: 2007 Loïc Corbasson <loic.corbasson@gmail.com>
+  SPDX-FileCopyrightText: 2021 Friedrich W. H. Kossebau <kossebau@kde.org>
 
   SPDX-License-Identifier: GPL-2.0-or-later
 */
@@ -13,6 +14,9 @@ using namespace EventViews::CalendarDecoration;
 
 #include <KIO/Job>
 #include <QUrl>
+
+struct ElementData;
+
 class Picoftheday : public Decoration
 {
 public:
@@ -24,60 +28,8 @@ public:
 
     Q_REQUIRED_RESULT QString info() const override;
 
+    static void cacheData(QDate date, ElementData *data);
+
 private:
     QSize mThumbSize;
 };
-
-class POTDElement : public StoredElement
-{
-    Q_OBJECT
-
-public:
-    POTDElement(const QString &id, QDate date, QSize initialThumbSize);
-    ~POTDElement() override
-    {
-    }
-
-    void setThumbnailSize(QSize size);
-    /** @reimp from Element */
-    QPixmap newPixmap(const QSize &size) override;
-
-    /**
-      Returns the thumbnail URL for a given width corresponding to a full-size image URL. */
-    Q_REQUIRED_RESULT QUrl thumbnailUrl(const QUrl &fullSizeUrl, const int width = 0) const;
-
-Q_SIGNALS:
-    void gotNewPixmap(const QPixmap &) const;
-    void gotNewShortText(const QString &) const;
-    void gotNewLongText(const QString &) const;
-    void gotNewUrl(const QUrl &) const;
-    // The following three signals are only used internally
-    void step1Success();
-    void step2Success();
-    void step3Success();
-
-protected Q_SLOTS:
-    void step1StartDownload();
-    void step2GetImagePage();
-    void step3GetThumbnail();
-
-private:
-    void step1Result(KJob *job);
-    void step2Result(KJob *job);
-    void step3Result(KJob *job);
-    QDate mDate;
-    QString mDescription;
-    QSize mDlThumbSize;
-    QString mFileName;
-    QUrl mFullSizeImageUrl;
-    float mHWRatio;
-    QSize mThumbSize;
-    QUrl mThumbUrl;
-    bool mFirstStepCompleted = false;
-    bool mSecondStepCompleted = false;
-    KIO::SimpleJob *mFirstStepJob = nullptr;
-    KIO::SimpleJob *mSecondStepJob = nullptr;
-    KIO::SimpleJob *mThirdStepJob = nullptr;
-    QTimer *mTimer = nullptr;
-};
-
